feat(website): translate Raw Crystal 2020 post

--- a/locale/ja/crystal-website/_posts/2020-12-16-raw-crystal-2020.md
+++ b/locale/ja/crystal-website/_posts/2020-12-16-raw-crystal-2020.md
@@ -1,33 +1,34 @@
 ---
 title: Raw Crystal 2020
-summary: Watch all the talks of the event on YouTube
+summary: YouTube でイベントの動画を閲覧できます
 thumbnail: +
-author: bcardiff
+
+author: bcardiff,makenowjust
 ---
 
-Last week was the first edition of Raw Crystal 2020. We want to thank all the speakers, attendees and especially Lorenzo Barasti for making this event a reality. We were honored to contribute to this effort and hope to see everybody again soon.
+先週、Raw Crystal 2020 の第一段が開催されました。すべてのスピーカーのみなさんと参加者のみなさん、そしてこのイベントを現実のものにしてくださった Lorenzo Barasti さんに感謝いたします。この取り組みに貢献できたこと光栄に思います。そして、再びみなさんに会えることを願っています。
 
-We used Zoom and YouTube for streaming. During the day we had up to 160 concurrent viewers, and every talk had at least 30 people.
+今回、Zoom と YouTube をストリーミングに利用しました。当日は最大 160 人の閲覧者がいて、各発表には最低でも 30 人は参加していました。
 
-## Videos 🍿
+## ビデオ 🍿
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/videoseries?list=PLfpFq_WLOW__RIIyWvTgYV4bw2cpav2mJ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin: 0 auto; max-width: 100%;"></iframe>
 
-## Audience
+## オーディエンス
 
-During the event, we used Zoom polls to ask some questions. Let’s see the demographics results.
+イベントの最中に、Zoom の投票機能を使っていくつかの質問を行いました。集計結果を見てみましょう。
 
 <table class="bordered no-underline" style="width: auto; margin: 0 auto;">
   <thead>
-    <tr><th>Region</th><th>Count</th></tr>
+    <tr><th>地域</th><th>数</th></tr>
   </thead>
   <tbody>
-    <tr><td>Asia</td><td class="center">4</td></tr>
-    <tr><td>Australia</td><td class="center">1</td></tr>
-    <tr><td>Europe</td><td class="center">50</td></tr>
-    <tr><td>North America</td><td class="center">33</td></tr>
-    <tr><td>South America</td><td class="center">8</td></tr>
-    <tr><td>Total</td><td class="center">96</td></tr>
+    <tr><td>アジア</td><td class="center">4</td></tr>
+    <tr><td>オーストラリア</td><td class="center">1</td></tr>
+    <tr><td>ヨーロッパ</td><td class="center">50</td></tr>
+    <tr><td>北アメリカ</td><td class="center">33</td></tr>
+    <tr><td>南アメリカ</td><td class="center">8</td></tr>
+    <tr><td>合計</td><td class="center">96</td></tr>
   </tbody>
 </table>
 
@@ -35,24 +36,24 @@ During the event, we used Zoom polls to ask some questions. Let’s see the demo
 
 <table class="bordered no-underline" style="width: auto; margin: 0 auto;">
   <thead>
-    <tr><th>Age</th><th>Count</th></tr>
+    <tr><th>年齢</th><th>数</th></tr>
   </thead>
   <tbody>
-    <tr><td>16 or less</td><td class="center">1</td></tr>
+    <tr><td>16以下</td><td class="center">1</td></tr>
     <tr><td>16-19</td><td class="center">1</td></tr>
     <tr><td>20-24</td><td class="center">5</td></tr>
     <tr><td>25-34</td><td class="center">27</td></tr>
     <tr><td>45-54</td><td class="center">49</td></tr>
-    <tr><td>55 or above</td><td class="center">5</td></tr>
-    <tr><td>Total</td><td class="center">96</td></tr>
+    <tr><td>55以上</td><td class="center">5</td></tr>
+    <tr><td>合計</td><td class="center">96</td></tr>
   </tbody>
 </table>
 
-Let’s see a couple of questions regarding the programming backgrounds of the attendees.
+参加者のプログラミング背景についての2つの質問の結果を見てみましょう。
 
 <table class="bordered no-underline" style="width: auto; margin: 0 auto;">
   <thead>
-    <tr><th>Most used programming language in the last 6 months</th><th>Count</th></tr>
+    <tr><th>ここ6ヶ月で最も利用したプログラミング言語</th><th>数</th></tr>
   </thead>
   <tbody>
     <tr><td>C/C++</td><td class="center">6</td></tr>
@@ -63,8 +64,8 @@ Let’s see a couple of questions regarding the programming backgrounds of the a
     <tr><td>Python</td><td class="center">2</td></tr>
     <tr><td>Ruby</td><td class="center">20</td></tr>
     <tr><td>Rust</td><td class="center">1</td></tr>
-    <tr><td>Other</td><td class="center">1</td></tr>
-    <tr><td>Total</td><td class="center">46</td></tr>
+    <tr><td>その他</td><td class="center">1</td></tr>
+    <tr><td>合計</td><td class="center">46</td></tr>
   </tbody>
 </table>
 
@@ -72,14 +73,14 @@ Let’s see a couple of questions regarding the programming backgrounds of the a
 
 <table class="bordered no-underline" style="width: auto; margin: 0 auto;">
   <thead>
-    <tr><th>How long have you been working with / looking into Crystal?</th><th>Count</th></tr>
+    <tr><th>どれくらいの期間 Crystal を利用してきたか/知っていたか？</th><th>数</th></tr>
   </thead>
   <tbody>
-    <tr><td>Less than a month</td><td class="center">2</td></tr>
-    <tr><td>Less than 6 months</td><td class="center">6</td></tr>
-    <tr><td>Less than a year</td><td class="center">7</td></tr>
-    <tr><td>Less than 3 years</td><td class="center">19</td></tr>
-    <tr><td>More than 3 years</td><td class="center">12</td></tr>
-    <tr><td>Total</td><td class="center">46</td></tr>
+    <tr><td>1ヶ月未満</td><td class="center">2</td></tr>
+    <tr><td>6ヶ月未満</td><td class="center">6</td></tr>
+    <tr><td>1年未満</td><td class="center">7</td></tr>
+    <tr><td>3年未満</td><td class="center">19</td></tr>
+    <tr><td>3年以上</td><td class="center">12</td></tr>
+    <tr><td>合計</td><td class="center">46</td></tr>
   </tbody>
 </table>
