--- a/locale/ja/crystal-website/_posts/2020-12-16-raw-crystal-2020.md
+++ b/locale/ja/crystal-website/_posts/2020-12-16-raw-crystal-2020.md
@@ -39,7 +39,7 @@ author: bcardiff,makenowjust
     <tr><th>年齢</th><th>数</th></tr>
   </thead>
   <tbody>
-    <tr><td>less than 16</td><td class="center">1</td></tr>
+    <tr><td>16以下</td><td class="center">1</td></tr>
     <tr><td>16 - 19</td><td class="center">1</td></tr>
     <tr><td>20 - 24</td><td class="center">5</td></tr>
     <tr><td>25 - 34</td><td class="center">27</td></tr>
