Update locale/ja files

--- a/locale/ja/crystal-website/_data/blog_authors.json
+++ b/locale/ja/crystal-website/_data/blog_authors.json
@@ -56,6 +56,9 @@
   "450": {
     "name": "+450 more"
   },
+  "beta-ziliani": {
+    "name": "Beta Ziliani"
+  },
   "makenowjust": {
     "name": "TSUYUSATO Kitsune (翻訳)"
   }
