--- a/locale/ja/crystal-website/_data/blog_authors.json
+++ b/locale/ja/crystal-website/_data/blog_authors.json
@@ -59,6 +59,9 @@
   "beta-ziliani": {
     "name": "Beta Ziliani"
   },
+  "jhass": {
+    "name": "Jonne Hass"
+  },
   "makenowjust": {
     "name": "TSUYUSATO Kitsune (翻訳)"
   }
