--- a/locale/ja/crystal-website/_data/nav.yml
+++ b/locale/ja/crystal-website/_data/nav.yml
@@ -9,6 +9,8 @@ main:
   url: /sponsors/
 - label: Community
   url: /community/
+- label: Team
+  url: /team/
 - label: Docs
   url: /docs/
 - label: GitHub
