--- a/locale/ja/crystal-website/_config.yml
+++ b/locale/ja/crystal-website/_config.yml
@@ -1,21 +1,26 @@
 name: プログラミング言語 Crystal
 description: Ruby のような構文で型推論のあるコンパイル言語
 url: https://ja.crystal-lang.org
-logo: /images/crystal-h.png
+logo: /assets/media/crystal_logo.svg
+
+latest_release:
+  version: 1.1.0
+  date: 2021-07-16
+
 defaults:
   -
     scope:
       path: ""
       type: pages
     values:
-      image: /images/icon.png
+      image: /assets/icon.png
       layout: default
   -
     scope:
       path: ""
       type: posts
     values:
-      image: /images/icon.png
+      image: /assets/icon.png
       layout: post
       is_post: true
   -
@@ -23,7 +28,7 @@ defaults:
       path: "install"
       type: pages
     values:
-      image: /images/icon.png
+      image: /assets/icon.png
       layout: install
       permalink: /install/:basename/
 twitter:
@@ -43,6 +48,11 @@ exclude:
 - README.md
 - scripts/*.cr
 - vendor
+
+assets:
+  assets:
+    - media/crystal_logo.svg
+    - icon.png
 
 plugins:
   - jekyll-seo-tag
