--- a/locale/ja/crystal-website/_data/opencollective.json
+++ b/locale/ja/crystal-website/_data/opencollective.json
@@ -1,14 +1,344 @@
 [
   {
-    "name": "Werner Stein",
+    "name": "PlaceOS",
+    "url": "https://place.technology/",
+    "logo": "sponsors/placeos.png",
+    "this_month": 250.0,
+    "all_time": 250.0,
+    "since": "Jul 26, 2021"
+  },
+  {
+    "name": "Ismael Abreu",
+    "url": "https://ismaelga.com",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Jul 23, 2021"
+  },
+  {
+    "name": "Simon Eskildsen",
+    "this_month": 25.0,
+    "all_time": 25.0,
+    "since": "Jul 21, 2021"
+  },
+  {
+    "name": "Dedicated Stars",
+    "url": "https://www.dedicatedstars.com",
+    "this_month": 5.0,
+    "all_time": 10.0,
+    "since": "Jul 19, 2021"
+  },
+  {
+    "name": "Incognito",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Jul 14, 2021"
+  },
+  {
+    "name": "Liberatys",
     "this_month": 10.0,
     "all_time": 10.0,
+    "since": "Jul 10, 2021"
+  },
+  {
+    "name": "Joseph Method",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Jul 9, 2021"
+  },
+  {
+    "name": "Agloks",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Jul 8, 2021"
+  },
+  {
+    "name": "Dedicated Stars",
+    "url": "https://www.dedicatedstars.com",
+    "this_month": 5.0,
+    "all_time": 10.0,
+    "since": "Jul 5, 2021"
+  },
+  {
+    "name": "Daiki Sato",
+    "url": "https://twitter.com/doew_",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Jul 3, 2021"
+  },
+  {
+    "name": "Renkaatsopivasti",
+    "url": "https://renkaatsopivasti.fi",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Jul 2, 2021"
+  },
+  {
+    "name": "NoAccountCasinos",
+    "url": "https://noaccountcasinos.io",
+    "this_month": 10.0,
+    "all_time": 10.0,
+    "since": "Jul 1, 2021"
+  },
+  {
+    "name": "Provided.io",
+    "url": "https://provided.io",
+    "this_month": 5.0,
+    "all_time": 10.0,
+    "since": "Jun 15, 2021"
+  },
+  {
+    "name": "Incognito",
+    "this_month": 5.0,
+    "all_time": 10.0,
+    "since": "Jun 12, 2021"
+  },
+  {
+    "name": "STORED Enterprises Limited",
+    "url": "https://www.bystored.com/",
+    "this_month": 25.0,
+    "all_time": 25.0,
+    "since": "Jun 9, 2021"
+  },
+  {
+    "name": "Windesol Sähkön Kilpailutus",
+    "url": "https://windesol.fi",
+    "this_month": 5.0,
+    "all_time": 10.0,
+    "since": "Jun 8, 2021"
+  },
+  {
+    "name": "Netin nopeustesti",
+    "url": "https://netinnopeustesti.com/",
+    "this_month": 5.0,
+    "all_time": 10.0,
+    "since": "May 27, 2021"
+  },
+  {
+    "name": "Casinoonlineaams.com",
+    "url": "https://www.casinoonlineaams.com",
+    "this_month": 25.0,
+    "all_time": 75.0,
+    "since": "May 26, 2021"
+  },
+  {
+    "name": "Matthias-Christian Ott",
+    "this_month": 4.0,
+    "all_time": 4.0,
+    "since": "May 2, 2021"
+  },
+  {
+    "name": "Vladislav Kuznetsov",
+    "this_month": 20.0,
+    "all_time": 20.0,
+    "since": "Apr 28, 2021"
+  },
+  {
+    "name": "Mikihiro Hamaguchi",
+    "url": "https://github.com/machida4",
+    "this_month": 5.0,
+    "all_time": 15.0,
+    "since": "Apr 26, 2021"
+  },
+  {
+    "name": "Guest",
+    "this_month": 10.0,
+    "all_time": 10.0,
+    "since": "Apr 16, 2021"
+  },
+  {
+    "name": "Pavel Dušánek",
+    "this_month": 20.0,
+    "all_time": 20.0,
+    "since": "Apr 14, 2021"
+  },
+  {
+    "name": "Christian Meredith",
+    "this_month": 3.0,
+    "all_time": 22.0,
+    "since": "Apr 12, 2021"
+  },
+  {
+    "name": "mointech GmbH",
+    "url": "https://mointech.de",
+    "this_month": 75.0,
+    "all_time": 300.0,
+    "since": "Apr 8, 2021"
+  },
+  {
+    "name": "Bilal Budhani",
+    "url": "https://bilalbudhani.com",
+    "this_month": 10.0,
+    "all_time": 40.0,
+    "since": "Apr 3, 2021"
+  },
+  {
+    "name": "GoMage",
+    "this_month": 1.0,
+    "all_time": 1.0,
+    "since": "Apr 1, 2021"
+  },
+  {
+    "name": "Lampros Chaidas",
+    "this_month": 10.0,
+    "all_time": 40.0,
+    "since": "Mar 29, 2021"
+  },
+  {
+    "name": "萌太",
+    "url": "https://twitter.com/________l____l_",
+    "this_month": 5.0,
+    "all_time": 20.0,
+    "since": "Mar 29, 2021"
+  },
+  {
+    "name": "Guillermo Siliceo Trueba",
+    "this_month": 5.0,
+    "all_time": 20.0,
+    "since": "Mar 26, 2021"
+  },
+  {
+    "name": "Svetlin Simonyan",
+    "url": "https://github.com/svetlins",
+    "this_month": 25.0,
+    "all_time": 100.0,
+    "since": "Mar 25, 2021"
+  },
+  {
+    "name": "Rob Hill",
+    "this_month": 10.0,
+    "all_time": 10.0,
+    "since": "Mar 25, 2021"
+  },
+  {
+    "name": "Auttawut Wiriyakreng",
+    "this_month": 5.0,
+    "all_time": 20.0,
+    "since": "Mar 25, 2021"
+  },
+  {
+    "name": "Askhat Saiapov",
+    "this_month": 5.0,
+    "all_time": 20.0,
+    "since": "Mar 23, 2021"
+  },
+  {
+    "name": "Mykhaylo Sorochan",
+    "this_month": 10.0,
+    "all_time": 10.0,
+    "since": "Mar 23, 2021"
+  },
+  {
+    "name": "Jared Smith",
+    "url": "https://www.linkedin.com/in/jaredsmithse/",
+    "this_month": 5.0,
+    "all_time": 20.0,
+    "since": "Mar 22, 2021"
+  },
+  {
+    "name": "Stas Syritsyn",
+    "this_month": 10.0,
+    "all_time": 10.0,
+    "since": "Mar 22, 2021"
+  },
+  {
+    "name": "Jaime Ortiz",
+    "this_month": 100.0,
+    "all_time": 265.0,
+    "since": "Mar 20, 2021"
+  },
+  {
+    "name": "Guest",
+    "this_month": 10.0,
+    "all_time": 10.0,
+    "since": "Mar 17, 2021"
+  },
+  {
+    "name": "Gitpod",
+    "this_month": 1.0,
+    "all_time": 1.0,
+    "since": "Mar 9, 2021"
+  },
+  {
+    "name": "Haiting Zhang",
+    "url": "https://twitter.com/slowy_oier",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Mar 8, 2021"
+  },
+  {
+    "name": "Writers Per Hour",
+    "url": "https://writersperhour.com",
+    "this_month": 25.0,
+    "all_time": 125.0,
+    "since": "Mar 6, 2021"
+  },
+  {
+    "name": "Guest",
+    "this_month": 1.0,
+    "all_time": 1.0,
+    "since": "Mar 4, 2021"
+  },
+  {
+    "name": "Bromine0x23",
+    "this_month": 1.0,
+    "all_time": 10.0,
+    "since": "Feb 27, 2021"
+  },
+  {
+    "name": "Foxyanski",
+    "this_month": 1.0,
+    "all_time": 1.0,
+    "since": "Feb 24, 2021"
+  },
+  {
+    "name": "Adam Zacharias",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Feb 22, 2021"
+  },
+  {
+    "name": "Mamafacts",
+    "url": "https://www.mamafacts.com/",
+    "this_month": 5.0,
+    "all_time": 30.0,
+    "since": "Feb 9, 2021"
+  },
+  {
+    "name": "New Casinos Australia",
+    "this_month": 2.0,
+    "all_time": 2.0,
+    "since": "Feb 5, 2021"
+  },
+  {
+    "name": "vinit joshi",
+    "this_month": 5.0,
+    "all_time": 65.0,
+    "since": "Feb 3, 2021"
+  },
+  {
+    "name": "Level UP Solutions",
+    "url": "https://www.levups.com",
+    "this_month": 5.0,
+    "all_time": 135.0,
+    "since": "Feb 1, 2021"
+  },
+  {
+    "name": "Fabien LEFEBVRE",
+    "url": "https://www.d1ceward.com",
+    "this_month": 10.0,
+    "all_time": 60.0,
+    "since": "Jan 25, 2021"
+  },
+  {
+    "name": "Werner Stein",
+    "this_month": 10.0,
+    "all_time": 60.0,
     "since": "Jan 24, 2021"
   },
   {
     "name": "Incognito",
-    "this_month": 10.0,
-    "all_time": 10.0,
+    "this_month": 25.0,
+    "all_time": 90.0,
     "since": "Jan 23, 2021"
   },
   {
@@ -27,34 +357,21 @@
     "name": "FindContinuingCare",
     "url": "https://www.findcontiuingcare.com",
     "this_month": 5.0,
-    "all_time": 5.0,
+    "all_time": 35.0,
     "since": "Jan 11, 2021"
-  },
-  {
-    "name": "Sell Your Phoenix House Fast",
-    "url": "https://www.sellyourphoenixhousefast.com",
-    "this_month": 5.0,
-    "all_time": 5.0,
-    "since": "Jan 3, 2021"
-  },
-  {
-    "name": "Marko Požega",
-    "this_month": 5.0,
-    "all_time": 5.0,
-    "since": "Dec 29, 2020"
   },
   {
     "name": "PrestoDoctor",
     "url": "https://prestodoctor.com",
     "logo": "sponsors/prestodoctor.png",
     "this_month": 150.0,
-    "all_time": 150.0,
+    "all_time": 1050.0,
     "since": "Dec 28, 2020"
   },
   {
     "name": "Josh Hollenbeck",
     "this_month": 10.0,
-    "all_time": 10.0,
+    "all_time": 70.0,
     "since": "Dec 19, 2020"
   },
   {
@@ -68,35 +385,35 @@
     "url": "https://atnos.com",
     "logo": "sponsors/atnos.png",
     "this_month": 75.0,
-    "all_time": 150.0,
+    "all_time": 600.0,
     "since": "Dec 11, 2020"
   },
   {
     "name": "OvrClock",
     "url": "https://ovrclock.com",
     "this_month": 5.0,
-    "all_time": 10.0,
+    "all_time": 40.0,
     "since": "Dec 11, 2020"
   },
   {
     "name": "anapsix",
     "url": "https://blog.random.io",
     "this_month": 5.0,
-    "all_time": 10.0,
+    "all_time": 40.0,
     "since": "Dec 2, 2020"
   },
   {
     "name": "Ryan Maki",
     "logo": "sponsors/ryan_maki.png",
     "this_month": 75.0,
-    "all_time": 150.0,
+    "all_time": 600.0,
     "since": "Dec 2, 2020"
   },
   {
     "name": "I.I. Jeliuc Alexandr",
     "url": "https://jeliuc.com",
     "this_month": 10.0,
-    "all_time": 20.0,
+    "all_time": 80.0,
     "since": "Dec 1, 2020"
   },
   {
@@ -104,7 +421,7 @@
     "url": "https://dutchie.com",
     "logo": "sponsors/dutchie.png",
     "this_month": 150.0,
-    "all_time": 300.0,
+    "all_time": 1200.0,
     "since": "Nov 23, 2020"
   },
   {
@@ -112,13 +429,6 @@
     "this_month": 100.0,
     "all_time": 100.0,
     "since": "Nov 23, 2020"
-  },
-  {
-    "name": "Kiirlaenud",
-    "url": "https://kiirlaenraha.ee/",
-    "this_month": 5.0,
-    "all_time": 10.0,
-    "since": "Nov 20, 2020"
   },
   {
     "name": "Joppy",
@@ -134,35 +444,22 @@
     "since": "Nov 10, 2020"
   },
   {
-    "name": "Mark Raymond Jr.",
-    "this_month": 5.0,
-    "all_time": 15.0,
-    "since": "Nov 9, 2020"
-  },
-  {
-    "name": "ParticleBrand",
-    "url": "https://particlebrand.com",
-    "this_month": 5.0,
-    "all_time": 15.0,
-    "since": "Nov 8, 2020"
-  },
-  {
     "name": "Ricardo Tomasi",
     "url": "https://ricardo.cc",
     "this_month": 25.0,
-    "all_time": 100.0,
+    "all_time": 250.0,
     "since": "Oct 9, 2020"
   },
   {
     "name": "Edward Loveall",
     "this_month": 5.0,
-    "all_time": 20.0,
+    "all_time": 50.0,
     "since": "Sep 29, 2020"
   },
   {
     "name": "Will Lewis",
     "this_month": 15.0,
-    "all_time": 45.0,
+    "all_time": 135.0,
     "since": "Sep 25, 2020"
   },
   {
@@ -172,17 +469,11 @@
     "since": "Sep 18, 2020"
   },
   {
-    "name": "Andrew Larin",
-    "this_month": 5.0,
-    "all_time": 25.0,
-    "since": "Sep 15, 2020"
-  },
-  {
     "name": "Vulk Cooperative",
     "url": "https://www.vulk.coop",
     "logo": "sponsors/vulk_cooperative.png",
     "this_month": 75.0,
-    "all_time": 375.0,
+    "all_time": 975.0,
     "since": "Sep 10, 2020"
   },
   {
@@ -196,7 +487,7 @@
     "name": "Leonardo Kewitz",
     "url": "https://kewitz.js.org",
     "this_month": 5.0,
-    "all_time": 75.0,
+    "all_time": 105.0,
     "since": "Sep 9, 2020"
   },
   {
@@ -208,22 +499,14 @@
   {
     "name": "Philipp Claßen",
     "this_month": 10.0,
-    "all_time": 50.0,
-    "since": "Aug 27, 2020"
-  },
-  {
-    "name": "Nookwit",
-    "url": "https://www.nookwit.com/",
-    "logo": "sponsors/nookwit.png",
-    "this_month": 75.0,
-    "all_time": 375.0,
+    "all_time": 110.0,
     "since": "Aug 27, 2020"
   },
   {
     "name": "Leonardo Kewitz",
     "url": "https://kewitz.js.org",
     "this_month": 5.0,
-    "all_time": 75.0,
+    "all_time": 105.0,
     "since": "Aug 24, 2020"
   },
   {
@@ -234,38 +517,23 @@
     "since": "Aug 22, 2020"
   },
   {
-    "name": "Speekify",
-    "url": "https://speekify.com",
-    "this_month": 5.0,
-    "all_time": 25.0,
-    "since": "Aug 20, 2020"
-  },
-  {
     "name": "omerakgoz34",
     "this_month": 1.0,
     "all_time": 1.0,
     "since": "Aug 13, 2020"
   },
   {
-    "name": "Randy Diaz",
-    "this_month": 5.0,
-    "all_time": 30.0,
-    "since": "Aug 7, 2020"
-  },
-  {
     "name": "Matt Berry",
     "url": "https://mattrb.com",
     "this_month": 5.0,
-    "all_time": 30.0,
+    "all_time": 60.0,
     "since": "Aug 7, 2020"
   },
   {
-    "name": "Andrew Lewman",
-    "url": "https://lewman.com",
-    "logo": "sponsors/andrew_lewman.jpg",
-    "this_month": 150.0,
-    "all_time": 900.0,
-    "since": "Aug 6, 2020"
+    "name": "vinit joshi",
+    "this_month": 5.0,
+    "all_time": 65.0,
+    "since": "Jul 14, 2020"
   },
   {
     "name": "Andra Antariksa Prihadi",
@@ -295,50 +563,50 @@
     "name": "Nobuaki Tanaka",
     "url": "https://twitter.com/tomerun",
     "this_month": 5.0,
-    "all_time": 40.0,
+    "all_time": 70.0,
     "since": "Jun 10, 2020"
   },
   {
     "name": "Oleksii Neishchenko",
     "this_month": 5.0,
-    "all_time": 40.0,
+    "all_time": 70.0,
     "since": "Jun 9, 2020"
   },
   {
     "name": "NekoIT",
     "url": "https://nekoit.xyz",
     "this_month": 10.0,
-    "all_time": 80.0,
+    "all_time": 140.0,
     "since": "May 31, 2020"
   },
   {
     "name": "Luan Dias",
     "this_month": 1.0,
-    "all_time": 8.0,
+    "all_time": 14.0,
     "since": "May 28, 2020"
   },
   {
     "name": "Artem Napolskih",
     "this_month": 5.0,
-    "all_time": 40.0,
+    "all_time": 70.0,
     "since": "May 22, 2020"
   },
   {
     "name": "Kevin Sjöberg",
-    "this_month": 25.0,
-    "all_time": 100.0,
+    "this_month": 10.0,
+    "all_time": 130.0,
     "since": "May 22, 2020"
   },
   {
     "name": "Glen Aultman-Bettridge",
     "this_month": 5.0,
-    "all_time": 45.0,
+    "all_time": 75.0,
     "since": "May 5, 2020"
   },
   {
     "name": "Szymon Madeja",
     "this_month": 5.0,
-    "all_time": 45.0,
+    "all_time": 70.0,
     "since": "May 5, 2020"
   },
   {
@@ -351,7 +619,7 @@
     "name": "Kagi",
     "url": "https://kagi.com",
     "this_month": 25.0,
-    "all_time": 250.0,
+    "all_time": 400.0,
     "since": "Apr 8, 2020"
   },
   {
@@ -363,7 +631,7 @@
   {
     "name": "Darwin",
     "this_month": 5.0,
-    "all_time": 50.0,
+    "all_time": 80.0,
     "since": "Apr 5, 2020"
   },
   {
@@ -371,13 +639,6 @@
     "this_month": 25.0,
     "all_time": 25.0,
     "since": "Mar 27, 2020"
-  },
-  {
-    "name": "Hotmagma",
-    "url": "https://sinulaen.ee",
-    "this_month": 5.0,
-    "all_time": 50.0,
-    "since": "Mar 16, 2020"
   },
   {
     "name": "Doxford",
@@ -388,21 +649,21 @@
   {
     "name": "Kasper Holbek Jensen",
     "this_month": 5.0,
-    "all_time": 55.0,
+    "all_time": 85.0,
     "since": "Mar 11, 2020"
   },
   {
     "name": "Braydon Kains",
     "url": "https://github.com/BKains",
     "this_month": 5.0,
-    "all_time": 55.0,
+    "all_time": 85.0,
     "since": "Mar 8, 2020"
   },
   {
     "name": "RemoteTeam.com",
     "url": "https://www.remoteteam.com",
     "this_month": 5.0,
-    "all_time": 55.0,
+    "all_time": 85.0,
     "since": "Feb 29, 2020"
   },
   {
@@ -422,21 +683,14 @@
   {
     "name": "Jonathan Gnagy",
     "this_month": 1.0,
-    "all_time": 51.0,
+    "all_time": 57.0,
     "since": "Oct 31, 2019"
   },
   {
     "name": "Raels Koder",
     "this_month": 25.0,
-    "all_time": 375.0,
+    "all_time": 525.0,
     "since": "Oct 30, 2019"
-  },
-  {
-    "name": "Patric Vormstein",
-    "url": "https://github.com/pvormste",
-    "this_month": 5.0,
-    "all_time": 75.0,
-    "since": "Oct 25, 2019"
   },
   {
     "name": "Takuya Matsunaga",
@@ -449,7 +703,7 @@
     "name": "Ryan Prior",
     "url": "https://www.ryanprior.com",
     "this_month": 5.0,
-    "all_time": 80.0,
+    "all_time": 110.0,
     "since": "Oct 7, 2019"
   },
   {
@@ -469,21 +723,14 @@
     "name": "WPsetup",
     "url": "https://wpsetup.org",
     "this_month": 5.0,
-    "all_time": 85.0,
+    "all_time": 115.0,
     "since": "Sep 2, 2019"
-  },
-  {
-    "name": "Level UP Solutions",
-    "url": "https://www.levups.com",
-    "this_month": 5.0,
-    "all_time": 85.0,
-    "since": "Sep 1, 2019"
   },
   {
     "name": "Max Fierke",
     "url": "https://www.maxfierke.com",
     "this_month": 10.0,
-    "all_time": 190.0,
+    "all_time": 250.0,
     "since": "Jul 21, 2019"
   },
   {
@@ -521,8 +768,9 @@
   {
     "name": "Roman Pushkin",
     "url": "https://github.com/ro31337",
-    "this_month": 100.0,
-    "all_time": 100.0,
+    "logo": "sponsors/roman_pushkin.jpg",
+    "this_month": 200.0,
+    "all_time": 300.0,
     "since": "Jan 11, 2019"
   },
   {
@@ -542,7 +790,7 @@
     "name": "Julien Reichardt",
     "url": "https://github.com/j8r",
     "this_month": 25.0,
-    "all_time": 650.0,
+    "all_time": 800.0,
     "since": "Dec 13, 2018"
   },
   {
@@ -550,7 +798,7 @@
     "url": "https://www.blitline.com",
     "logo": "sponsors/blitline.png",
     "this_month": 75.0,
-    "all_time": 1950.0,
+    "all_time": 2400.0,
     "since": "Dec 12, 2018"
   }
 ]
