--- a/locale/ja/crystal-book/mkdocs.yml
+++ b/locale/ja/crystal-book/mkdocs.yml
@@ -12,13 +12,10 @@ extra:
     - name: 日本語
       link: https://ja.crystal-lang.org/reference/
       lang: ja
-  analytics:
-    provider: google
-    property: UA-42353458-1
 
 theme:
   name: material
-  language: en
+  language: ja
   palette:
     primary: black
     accent: blue
