Update top page

--- a/locale/ja/crystal-website/_data/install.yaml
+++ b/locale/ja/crystal-website/_data/install.yaml
@@ -40,7 +40,7 @@
   icon: install/arch@2x.png
 -
   url: /install/on_elementary_os
-  caption: Elementary OS
+  caption: elementary OS
   icon: install/elementary@2x.png
 -
   url: /install/on_fedora
@@ -71,6 +71,14 @@
   caption: FreeBSD
   icon: install/freebsd@2x.png
 -
+  url: /install/on_openbsd
+  caption: OpenBSD
+  icon: install/openbsd@2x.png
+-
   url: /install/on_wsl
   caption: Windows Subsystem for Linux
   icon: install/windows@2x.png
+-
+  url: /install/from_asdf
+  caption: from asdf
+  icon: install/linux@2x.png
