--- a/locale/ja/crystal-website/_data/team.yaml
+++ b/locale/ja/crystal-website/_data/team.yaml
@@ -69,4 +69,8 @@ alumni:
     name: Santiago Palladino
 
   RX14:
-    name: Stephanie Wilde-Hoobs
+    name: Stephanie Wilde-Hobbs
+
+moderators:
+  HertzDevil:
+    name: Quinton Miller
